# drf-api

./: README.md  db.sqlite3  pyproject.toml  requirements.txt
blog_api/: settings.py  urls.py
courses/: admin.py  models.py  serializers.py  views.py
courses/migrations/: 0001_initial.py
